Changelog of recent updates: https://github.com/RobertSkalko/Mine-And-Slash-Rework/blob/1.20-Forge/changelogs/v.5.9.txt

v.6.0.0

EXTREMELY EXPERIMENTAL UPDATE! 
It's probably buggy, and maybe I missed some incompatibility problem, report please!

New Compatibility Features, and a full set of compatibility options!!!
Mine and Slash will now by default enable the compatibility mode, making it suitable to place in any modpack as it will try not to invalidate other mod's damage.
You can still choose to enable the original damage override mode for better balance.

- Option for Mns damage to never replace or override other damage. 
Now Mns dmg can act as bonus damage, still within it's own systems but will now let you for example deal damage with other spell mods.
- entity v entity dmg will be scaled to your "mns hp" while environmental damage will still only care about your vanilla hearts
- allows choosing to use vanilla hearts instead of imaginry mns health
- Allows choosing which game balance datapack is used from the config 
- option to disable newbie bonus resists and high lvl minus resists 
- option to cap item durability loss
- new client option to only render bars if not filled, this means at full hp mana etc your bars hide
- added option to not disable vanilla hp regen mechanic
- added option to choose which player base stat datapack is used, the compat option has less base stats, because the stat scaling is lower too
- added MOB_PERCENT_DAMAGE_AS_BONUS and MOB_FLAT_DAMAGE_BONUS configs which will be lowered on the compat version of the default config
- added option to ignore weapon spell casting requirements for compat mode
- added stat requirement multi config
- added config for disabling mob iframes

Other:
- procced spell stats now actually use mana cost
- fixed dots dealing dmg 1 extra time, effectively making dot builds.. about 30% better sometimes
- loot chests can no longer be salvaged