@@ -29,6 +29,7 @@ public class DefaultCompatData {
     public double mobFlatBonusDamage = 6;
     public double mobPercBonusDmg = 0.33F;
     public double statReqMulti = 1;
+    public double spellBaseDmgMulti = 1;
     public boolean enable_newbie_res = false;
     public GameBalanceConfig.BalanceEnum balance = GameBalanceConfig.BalanceEnum.COMPAT_BALANCE;
     public BaseStatsConfig.BaseStatsEnum baseStats = BaseStatsConfig.BaseStatsEnum.COMPAT_BALANCE;
