@@ -1,16 +1,15 @@
 package com.robertx22.mine_and_slash.vanilla_mc.packets;
 
+import com.robertx22.library_of_exile.main.MyPacket;
+import com.robertx22.library_of_exile.packets.ExilePacketContext;
 import com.robertx22.mine_and_slash.a_libraries.dmg_number_particle.DamageParticleAdder;
 import com.robertx22.mine_and_slash.config.forge.ClientConfigs;
 import com.robertx22.mine_and_slash.mmorpg.SlashRef;
-import com.robertx22.library_of_exile.main.MyPacket;
-import com.robertx22.library_of_exile.packets.ExilePacketContext;
 import com.robertx22.mine_and_slash.mmorpg.registers.common.items.SlashItems;
 import net.minecraft.ChatFormatting;
 import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.item.ItemEntity;
 import net.minecraft.world.item.ItemStack;
@@ -71,7 +70,7 @@ public class DmgNumPacket extends MyPacket<DmgNumPacket> {
 
     @Override
     public void onReceived(ExilePacketContext ctx) {
-        if (ClientConfigs.getConfig().ENABLE_FLOATING_DMG.get()) {
+        if (ClientConfigs.getConfig().ENABLE_FLOATING_DMG.get().getReal()) {
             DamageParticleAdder.displayParticle(ctx.getPlayer().level().getEntity(id), this);
         }
     }
